--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,6 +32,10 @@ en:
         draft_description: Great for when your conference is not quite finished
         slug: Permalink
         slug_description: Permalink URL for this conference
+        location: Location
+        location_description: Location of the conference
+        file: Brochure
+        photo: Banner
 
       spina/events/organisation:
         name: Organisation name
