--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,6 +22,13 @@ en:
         saving: Saving...
         saved: Organisation saved
 
+      venues:
+        title: Venues
+        new: New venue
+        save: Save venue
+        saving: Saving...
+        saved: Venue saved
+
   activerecord:
     attributes:
       spina/events/conference:
