Move speakers to it's own view

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,6 +40,7 @@ en:
         save: Save speaker
         saving: Saving...
         saved: Speaker saved
+        add: Add/Remove speakers
 
       questions:
         title: Questions
